--- a/leetcodeWebsite/050幂运算pow.md
+++ b/leetcodeWebsite/050幂运算pow.md
@@ -51,10 +51,10 @@ class Solution:
         return pow
 ```
 解析：对于此迭代的解法，从算式分解中可以溯源  
-比如：$2^{39} $ = $2*4^{19}$ =  $2*4*16^9$ = $2*4*16*256^4$ = ... = $2*4*16*xxxx * t^0$
+比如：$2^{39} ​$ = $2*4^{19}​$ =  $2*4*16^9​$ = $2*4*16*256^4​$ = ... = $2*4*16*xxxx * t^0​$
 
 
 # lesson
- if n & 1 was same as: if n % 2
+ if n & 1 was same as: if n % 2  
  n >> 1 was same as : n //= 2
 
