--- a/leetcodeWebsite/046排列.md
+++ b/leetcodeWebsite/046排列.md
@@ -1,3 +1,5 @@
+
+```python
 class Solution:
     def permute(self, nums: List[int]) -> List[List[int]]:
         nums.sort()
@@ -15,3 +17,16 @@ class Solution:
                 nums[start], nums[i] = nums[i], nums[start]
                 self.permute_helper(nums, start+1, result)
                 nums[start], nums[i] = nums[i], nums[start]
+```
+
+
+# 总结
+
+生成排列有两种方式
+
+1. **固定位置**放元素
+2. **固定元素**找位置
+
+
+
+两者的时间复杂度是一样的，但是（2）的分析会比较难。
