--- a/leetcodeWebsite/047排列2.md
+++ b/leetcodeWebsite/047排列2.md
@@ -1,5 +1,7 @@
 # 047 排列Ⅱ
 
+**有重复元素的排列**
+
 
 * My Solution extracted from `046排列`   
 
@@ -24,7 +26,7 @@ class Solution:
                 nums[start], nums[i] = nums[i], nums[start]
 ```
 
-适用与无重复列表的算法不再适用含有重复元素的列表，上面这个算法无法AC`[0, 0,0,1, 9]`输入。
+适用于*无重复列表*的算法不再适用含*有重复元素*的集合，上面这个算法无法AC输入`[0, 0,0,1, 9]`。
 
 是因为**当swap之后，后面的元素就不满足.sort()有序的状态**。
 
@@ -50,7 +52,6 @@ class Solution:
                     wc[k] -= 1
                     self.forward(n, idx+1, wc, path + [k], res)
                     wc[k] += 1
-                
 ```
 
 
