--- a/leetcodeWebsite/060kth排列.md
+++ b/leetcodeWebsite/060kth排列.md
@@ -1,6 +1,24 @@
-# 060 Kth 排列
+# 060 $k^{th}$ 排列
 
-* My Solution 
+给出集合 `[1,2,3,…,*n*]`，其所有元素共有 *n*! 种排列。
+
+按大小顺序列出所有排列情况，并一一标记，当 *n* = 3 时, 所有排列如下：
+
+1. `"123"`
+2. `"132"`
+3. `"213"`
+4. `"231"`
+5. `"312"`
+6. `"321"`
+
+给定 *n* 和 *k*，返回第 *k* 个排列。
+
+说明：
+
+- 给定 *n* 的范围是 [1, 9]。
+- 给定 *k* 的范围是[1,  *n*!]。
+
+* *My Solution* 
 
 ```python
 def mul(n):
@@ -23,7 +41,22 @@ class Solution:
         return (''.join(map(str, res)))
 ```
 
-时间复杂度:  $O(N^2)$ 因为`list.pop`时间复杂度为N
+时间复杂度:  $O(N^2)$ 因为`list.pop`时间复杂度为N.
+
+可以对上面这个算法做一点轻微的修改，更加readable
+
+```python
+        while k > 0:
+            unit = mul(n-1)
+            res.append( content.pop(k//unit) )
+            n -= 1
+            k %= unit
+        res += content
+```
+
+当不是序列接下来元素的第一个排列时，计算接下来元素的首元素应该是什么。
+
+当是序列接下来元素的第一个排列时，直接将生成的元素与列表里面的元素拼接。由于content中的元素是升序，因此其自然是接下来元素的第一个排列。
 
 ---
 
