--- a/leetcodeWebsite/068文本对齐.md
+++ b/leetcodeWebsite/068文本对齐.md
@@ -16,11 +16,11 @@ class Solution:
                 wordlen = len(word)
             else:
                 if maxWidth - (wordlen + len(line) - 1) >= len(word) + 1:
-                    line.append(word)
+                    line.append(word) # 这个word可以放入当前line,那么就塞进去
                     wordlen += len(word)
                 else:
+                    # 放不进了，将line处理掉；再塞进去。
                     res.append(processLine(line, wordlen, maxWidth))
-
                     line, wordlen = [word], len(word)
         if line:
             res.append(processLine(line, wordlen, maxWidth, True))
