--- a/leetcodeWebsite/044通配符匹配.md
+++ b/leetcodeWebsite/044通配符匹配.md
@@ -6,7 +6,7 @@ Given an input string (s) and a pattern (p), implement wildcard pattern matching
 The matching should cover the entire input string (not partial).
 
 ```python
-def helper(s, i, p, j):
+def helper(s, i, p, j): # s[i:] 能否使用p[j:]模式进行匹配
     if i == len(s) and j == len(p):
         return True
     
@@ -49,5 +49,15 @@ class Solution:
         return helper(s, 0, ''.join(res), 0)
 ```
 
+*Time Exceded?* 
 
-*Time Exceded?*
+---
+
+使用`functools.lru_cache`
+
+```python
+from functools import lru_cache
+
+@lru_cache(maxsize=None)
+```
+
