--- a/leetcodeWebsite/099恢复二叉树.md
+++ b/leetcodeWebsite/099恢复二叉树.md
@@ -61,7 +61,6 @@ class Solution:
     def recoverTree(self, root: TreeNode) -> None:
         global first, last, prevNode
         self.Inorder(root)
-        # print(first.val, last.val)
         first.val, last.val = last.val, first.val
         
     def Inorder(self, root):
@@ -72,7 +71,7 @@ class Solution:
         if first is None and prevNode.val >= root.val:
             first = prevNode
         if first is not None and prevNode.val >= root.val:
-        # this 'if' is quite important
+        # this 'if' is quite important,能够处理交换两个相邻元素的情况
             last = root
         prevNode = root
         self.Inorder(root.right)
