--- a/leetcodeWebsite/164最大gap.md
+++ b/leetcodeWebsite/164最大gap.md
@@ -2,6 +2,40 @@
 
 Given an integer array `nums`, return *the maximum difference between two successive elements in its sorted form*. If the array contains less than two elements, return `0`.
 
+* mine
+
+```python
+class Solution:
+    def maximumGap(self, nums: List[int]) -> int:
+        if len(nums) < 2:
+            return 0
+        MAX, MIN = max(nums), min(nums)
+        ran = MAX - MIN
+        n = len(nums)
+        delta = max(1, (ran + 1) / n)
+        bulks = []
+        
+        for _ in range(n):
+            bulks.append([])
+        for num in nums:
+            bulks[int((num - MIN) / delta)] += num,
+        
+        i, j = 0, 1
+        maxGap = 0
+        while j < n:
+            while j < n and not bulks[j]:
+                j += 1
+            if j == n:
+                break
+            maxGap = max(maxGap, min(bulks[j]) - max(bulks[i]))
+            i, j = j, j + 1
+        return maxGap
+        
+        
+```
+
+
+
 * ##### [bucket sort] JAVA solution with explanation, [O(N) time and space](https://leetcode.com/problems/maximum-gap/discuss/50643/bucket-sort-JAVA-solution-with-explanation-O(N)-time-and-space)
 
 ---
