--- a/leetcodeWebsite/239滑动窗口最大值.md
+++ b/leetcodeWebsite/239滑动窗口最大值.md
@@ -31,7 +31,7 @@ class Solution:
 
 
 
-
+简化一下，先放(k-1)个元素进去。然后对接下来的每一个元素，入堆，再使用堆弹出最大元素，如果该元素位置不在合理区间，则抛弃，否则存入结果集，再处理下一个元素。
 
 ```python
 import heapq
@@ -46,7 +46,7 @@ class Solution:
             heapq.heappush(lst,  [-nums[i], i])
             while not (i - k + 1 <= lst[0][1] <= i):
                 t = heapq.heappop(lst)
-                res.append(nums[lst[0][1]])
+            res.append(nums[lst[0][1]])
         return res
 ```
 
