--- a/leetcodeWebsite/106中序后序序列构建二叉树.md
+++ b/leetcodeWebsite/106中序后序序列构建二叉树.md
@@ -33,3 +33,23 @@ So this implementation has a very bad performance, and you can avoid it.
 
 ```
 
+
+
+* ##### [Don't use top voted Python solution for interview, here is why.](https://leetcode.com/problems/construct-binary-tree-from-inorder-and-postorder-traversal/discuss/221681/Don't-use-top-voted-Python-solution-for-interview-here-is-why.)
+
+  ```python
+  class Solution:
+      def buildTree(self, inorder, postorder):
+          map_inorder = {}
+          for i, val in enumerate(inorder): map_inorder[val] = i
+          def recur(low, high): #中序遍历的[start_point, end_point]
+              if low > high: return None
+              x = TreeNode(postorder.pop())
+              mid = map_inorder[x.val]
+              x.right = recur(mid+1, high)
+              x.left = recur(low, mid-1)
+              return x
+          return recur(0, len(inorder)-1)
+  ```
+
+  
