--- a/leetcodeWebsite/164最大gap.md
+++ b/leetcodeWebsite/164最大gap.md
@@ -2,7 +2,7 @@
 
 Given an integer array `nums`, return *the maximum difference between two successive elements in its sorted form*. If the array contains less than two elements, return `0`.
 
-* mine
+* mine,桶排序，n个数字分配n个桶，那么可以通过计算相邻两个桶之间的distance
 
 ```python
 class Solution:
@@ -30,8 +30,6 @@ class Solution:
             maxGap = max(maxGap, min(bulks[j]) - max(bulks[i]))
             i, j = j, j + 1
         return maxGap
-        
-        
 ```
 
 
