--- a/leetcodeWebsite/004排序数组中位数.md
+++ b/leetcodeWebsite/004排序数组中位数.md
@@ -9,6 +9,7 @@
 from typing import List
 
 def topk(nums1, i, nums2, j, k):
+    # i, j are 0-based, k is 1-based
 	s1, s2 = len(nums1), len(nums2)
 	if i >= len(nums1):
 		return nums2[j+k-1]
@@ -18,7 +19,7 @@ def topk(nums1, i, nums2, j, k):
 		return min(nums1[i], nums2[j])
 
 	delta = k // 2
-	p1 = min(len(nums1) - 1, i + delta - 1)
+	p1 = min(len(nums1) - 1, i + delta - 1) # 待比较之下标
 	p2 = min(len(nums2) - 1, j + delta - 1)
 	if nums1[p1] < nums2[p2]:
 		return topk(nums1, p1+1, nums2, j, k - (p1-i+1))
