--- a/leetcodeWebsite/005最长回文字串.md
+++ b/leetcodeWebsite/005最长回文字串.md
@@ -11,24 +11,18 @@ class Solution:
             f.append([0] * n)
         for i in range(n):
             f[i][i] = 1
+        
+        #从最后一行开始向第一行逐行填充F
         for i in range(n-1, -1, -1):
             for j in range(i+1, n):
-                f[i][j] = max(f[i+1][j], f[i][j-1])
-                if s[i] == s[j]:
-                    f[i][j] = max(f[i][j], f[i+1][j-1] + 2)
-        maxlen = f[0][n-1]
-        l = maxlen
-        i, j = 0, n-1
-        print(f)
-        while i<=j:
-            if i+1 < n and f[i][j] == f[i+1][j]:
-                i += 1
-            elif j-1 >= 0 and f[i][j] == f[i][j-1]:
-                j -= 1
-            elif i+1 < n and j-1 >= 0 and f[i][j] == f[i+1][j-1]+2:
-                return s[i:j+1]
-            else:
-                return s[i]
+                if s[i] == s[j] and ((i+1==j) or f[i+1][j-1] == 1):
+                    f[i][j] = 1
+        
+        # 斜对角线:沿着左上角的对角线到中央对角线 -0,-1,-2...
+        for i in range(n):
+            for j in range(i+1):
+                if f[j][n-i-1+j] == 1:
+                    return s[j : n-i+j]
 ```
 
 这个解法的动态方程如下
@@ -49,7 +43,7 @@ $$
 
 应该是判断s[i:j+1] $f[i][j]$是否为回文字串
 $$
-f[i][j] = 
+f[i][j] = sss
 \begin{cases}
 0 \qquad & s[i] != s[j] \qquad or \qquad (s[i] == s[j] and f[i+1][j-1]!=1) \\
 1 \qquad & s[i] == s[j] \qquad and \qquad f[i+1][j-1]==1
