--- a/leetcodeWebsite/010正则匹配.md
+++ b/leetcodeWebsite/010正则匹配.md
@@ -11,12 +11,15 @@ The matching should cover the **entire** input string (not partial).
 
 正则匹配与通配符匹配(044)规则上有细微的区别.
 
-1. 单字符匹配 ? vs .
+1. 单字符匹配 ? vs `.`
 2. `*`所代表的意思，正则中代表之前一个字符[0, any]次，通配符中表示任意字符任意次
 
 * mine
 
 ```python
+from functools import lru_cache
+
+@lru_cache(maxsize=None)
 def helper(s, i, p, j):
     if i >= len(s) and j >= len(p):
         return True
@@ -53,7 +56,6 @@ def helper(s, i, p, j):
 class Solution:
     def isMatch(self, s: str, p: str) -> bool:
         return helper(s, 0, p, 0)
-
 ```
 
 ```
