--- a/leetcodeWebsite/047排列2.md
+++ b/leetcodeWebsite/047排列2.md
@@ -26,7 +26,7 @@ class Solution:
                 nums[start], nums[i] = nums[i], nums[start]
 ```
 
-适用于*无重复列表*的算法不再适用含*有重复元素*的集合，上面这个算法无法AC输入`[0, 0,0,1, 9]`。
+适用于*无重复列表*的算法不再适用含*有重复元素*的集合，上面这个算法无法AC输入`[0, 0, 0,1, 9]`。
 
 是因为**当swap之后，后面的元素就不满足.sort()有序的状态**。
 
@@ -75,12 +75,16 @@ After several times of append and other operations,
 \#here I just pay attention to one element, 2's position in the inner list
 We get the current list like below:
 
-
-
 1. [2,x,x,x]
+
 2. [x,2,x,x]
+
 3. [x,x,2,x]
+
 4. [x,x,x,2]
+
+   
+
    Of course if we replace the "x" with other elements, there should be several other lists in each row,but the position of "2" should just be same,[0],[1],[2],[3] for each row.
    The approach will traverse each list and insert the new element.
    If the new element is "2", the current "for loop" will break.
