--- a/leetcodeWebsite/051N皇后.md
+++ b/leetcodeWebsite/051N皇后.md
@@ -24,7 +24,7 @@ class Solution:
                 cnt += 1
             for i in range(m, n):
                 
-                for t in range(m):
+                for t in range(m): # 判断p[i]放在m是否ok
                     if m - t == abs(ps[t] - ps[i]):
                         break
                 else:
@@ -37,27 +37,37 @@ class Solution:
 
 
 
-根据[leetcode discussion](https://leetcode.com/problems/n-queens/discuss/19810/Fast-short-and-easy-to-understand-python-solution-11-lines-76ms)讨论，“whenever a location `(x, y`) is occupied, any other locations `(p, q )` where `p + q == x + y` or `p - q == x - y` would be invalid. ”。可以将上面判断`ps[t]`是否valid的`for`循环进行优化。
+根据[leetcode discussion](https://leetcode.com/problems/n-queens/discuss/19810/Fast-short-and-easy-to-understand-python-solution-11-lines-76ms)讨论，“whenever a location `(x, y`) is occupied, any other locations `(p, q)` where `p + q == x + y` or `p - q == x - y` would be invalid. ”。可以将上面判断`ps[t]`是否valid的`for`循环进行优化。
 
 ```python
+def convertDigit2String(d, n):
+    t = ['.'] * n
+    t[d] = 'Q'
+    return ''.join(t)
+
 class Solution:
     def solveNQueens(self, n: int) -> List[List[str]]:
         res = []
         ps = list(range(n))
-        
-        def perm(m, xy_diff, xy_sum):
+        xy_diff, xy_sum = set(), set()
+        def perm(m):
             if m == n:
                 res.append(ps[:])
             for i in range(m, n):
                 
                 if m + ps[i] not in xy_sum and (m - ps[i]) not in xy_diff:
                     ps[m], ps[i] = ps[i], ps[m]
-                    perm(m+1, xy_diff + [(m - ps[m])], xy_sum + [m + ps[m]])
+                    xy_diff.add((m - ps[m]))
+                    xy_sum.add(m + ps[m])
+                    perm(m+1)
+                    xy_diff.remove((m - ps[m]))
+                    xy_sum.remove(m + ps[m])
                     ps[m], ps[i] = ps[i], ps[m]
-        perm(0, [], [])
+        perm(0)
         return list(map(lambda t: [convertDigit2String(i, n) for i in t], res))
 ```
 
 存在list中，时间复杂度并没有变低，时间复杂度常项变低了。
 
 在leetcode上实验，将list变为set,时间复杂度不变。因为set增加、删除一个元素时间复杂度为N。
+
