--- a/leetcodeWebsite/062唯一路径数量.md
+++ b/leetcodeWebsite/062唯一路径数量.md
@@ -1,4 +1,4 @@
-
+# 062唯一路径数量
 
 https://leetcode.windliang.cc/leetCode-62-Unique-Paths.html
 
@@ -16,7 +16,7 @@ class Solution:
                     lst[i] = lst[i-1] + lst[i]
         return lst[-1]
 ```
-		
+
 * 问题本质
 从左上角，到右下角，总会是 3 个 R，2 个 D，只是出现的顺序不一样。
 所以求解法，本质上是求了组合数，N = m + n - 2，也就是总共走的步数。
