--- a/leetcodeWebsite/046排列.md
+++ b/leetcodeWebsite/046排列.md
@@ -1,3 +1,8 @@
+# 046排列
+
+Given an array nums of distinct integers, return all the possible permutations. You can return the answer in any order.
+
+* M1
 
 ```python
 class Solution:
