--- a/leetcodeWebsite/050幂运算pow.md
+++ b/leetcodeWebsite/050幂运算pow.md
@@ -1,3 +1,7 @@
+# 050幂运算
+
+Implement [pow(x, n)](http://www.cplusplus.com/reference/valarray/pow/), which calculates `x` raised to the power `n` (i.e., `xn`).
+
 * My Solution 
 
 _recursive_
@@ -17,8 +21,6 @@ class Solution:
             t = t * t * (x if n&1 else 1)
             return t if symbol==True else 1. / t
 ```
-
-
 
 * Other Solutions
 [link](https://leetcode.com/problems/powx-n/discuss/19560/Shortest-Python-Guaranteed)
