--- a/leetcodeWebsite/077组合.md
+++ b/leetcodeWebsite/077组合.md
@@ -21,3 +21,24 @@ class Solution:
         return self.combine(n-1, k) + t
 ```
 
+
+
+_iterative_ 参考了leetcode [disc](https://leetcode.com/problems/combinations/discuss/26992/Short-Iterative-C%2B%2B-Answer-8ms)
+
+类似于`perm`，从m索引开始。但是每一次都取m之后的元素，在m之前的元素就不取了。主要的区别在`(*)`
+
+```python
+class Solution:
+    def combine(self, n, k):
+        A = list(range(1, n+1))
+        res = []
+        def comb(m, p):
+            if len(p) == k:
+                res.append(p)
+                return
+            for i in range(m, n):
+                comb(i+1, p + [A[i]]) #（*)
+        comb(0, [])
+        return res
+```
+
