--- a/leetcodeWebsite/095 唯一的二叉搜索树Ⅱ.md
+++ b/leetcodeWebsite/095 唯一的二叉搜索树Ⅱ.md
@@ -39,7 +39,6 @@ class Solution:
 两点需要注意，一是当列表为空是，需要返回一个包含None的列表，这是因为Trees函数返回的nodes构成的二叉树集合。如果某个节点左侧的节点一个都没有，那么其值应该为None。二是，只需要处理包含空值和一个值的情况，它的组合变化在for循环中。因此，上面的函数可以修改为
 
 ```python
-
 def trees(nodes):
     # return a list containing all trees' roots
     if not nodes:
@@ -59,15 +58,11 @@ class Solution:
         return trees(list(range(1, n+1)))
 ```
 
-可以用`functools.lru_cache`加速吗？Of Course Not, List不可哈
-
-
-
-
+很明显，存在重复调用。可以用`functools.lru_cache`加速吗？Of Course Not, List不可哈。
 
 * ##### [Java Solution with DP](https://leetcode.com/problems/unique-binary-search-trees-ii/discuss/31493/Java-Solution-with-DP)
 
-  通过前n个数构成的`bst`来构造`n+1个数的情况。在n+1的情况下，如果根节点value为j，则solutions(n)中，根节点值≥j的所有树终得值都得+j，（向右便宜j位）
+  通过前`n`个数构成的`bst`来构造`n+1`个数的情况。在n+1的情况下，如果根节点value为j，则solutions(n)中，根节点值≥j的所有树终得值都得+j，（向右偏移j位）
 
   ```java
   public static List<TreeNode> generateTrees(int n) {
