--- a/leetcodeWebsite/099恢复二叉树.md
+++ b/leetcodeWebsite/099恢复二叉树.md
@@ -1,6 +1,8 @@
 # 099恢复二叉树
 
+You are given the `root` of a binary search tree (BST), where exactly two nodes of the tree were swapped by mistake. *Recover the tree without changing its structure*.
 
+**Follow up:** A solution using `O(n)` space is pretty straight forward. Could you devise a constant space solution?
 
 * mine 
 
@@ -79,7 +81,7 @@ class Solution:
         self.Inorder(root.right)
 ```
 
-leetcode summit为何通过不了？
+leetcode submit为何通过不了？
 
 
 
