--- a/leetcodeWebsite/100 同一颗树.md
+++ b/leetcodeWebsite/100 同一颗树.md
@@ -4,6 +4,8 @@ Given the roots of two binary trees `p` and `q`, write a function to check if th
 
 Two binary trees are considered the same if they are structurally identical, and the nodes have the same value.
 
+* Mine
+
 ```python
 class Solution:
     def isSameTree(self, p: TreeNode, q: TreeNode) -> bool:
