--- a/leetcodeWebsite/114 二叉树转为链表.md
+++ b/leetcodeWebsite/114 二叉树转为链表.md
@@ -1,8 +1,15 @@
 # 114 二叉树转为链表
 
+Given the `root` of a binary tree, flatten the tree into a "linked list":
+
+- The "linked list" should use the same `TreeNode` class where the `right` child pointer points to the next node in the list and the `left` child pointer is always `null`.
+- The "linked list" should be in the same order as a [**pre-order** **traversal**](https://en.wikipedia.org/wiki/Tree_traversal#Pre-order,_NLR) of the binary tree.
 
 
-* mine
+
+---
+
+* mine: `helper`函数的功能是把树t转为满足要求的链表，内部有终止条件，以及将左右两个分支处理、整合的步骤。
 
 ```python
 # Definition for a binary tree node.
@@ -51,4 +58,76 @@ class Solution:
   }
   ```
 
+  [解释](https://leetcode.com/problems/flatten-binary-tree-to-linked-list/discuss/36977/My-short-post-order-traversal-Java-solution-for-share/150699)
+
+  Great solution of the `post order traversal` in `(right, left, root)` order!
+  Basically, the traversing order after flattening is `pre order traversal` in `(root, left, right)`, like
+
   
+
+  ```
+  1
+   \
+    2
+     \
+      3
+       \
+        4
+         \
+          5
+           \
+            6
+  ```
+
+  
+
+  from the original tree:
+
+  
+
+  ```
+      1
+     / \
+    2   5
+   / \   \
+  3   4   6
+  ```
+
+  
+
+  If we traverse the flattened tree in the reverse way, we would notice that `[6->5->4->3->2->1]` is in `(right, left, root)` order of the original tree. So the reverse order after flattening is `post order traversal` in `(right, left, root)` order like `[6->5->4->3->2->1]`.
+
+  
+
+  The idea is to traverse the original tree in this order by
+
+  
+
+  ```
+  public void flatten(TreeNode root) {
+      if (root == null)
+          return;
+      flatten(root.right);
+      flatten(root.left);
+  }
+  ```
+
+  
+
+  and then set each node's right pointer as the previous one in `[6->5->4->3->2->1]`, as such the right pointer behaves similar to a link in the flattened tree(though technically, it's still a right child reference from the tree data structure's perspective) and set the left child as null before the end of one recursion by
+
+  
+
+  ```
+  private TreeNode prev = null;
+  
+  public void flatten(TreeNode root) {
+      if (root == null)
+          return;
+      flatten(root.right);
+      flatten(root.left);
+      root.right = prev;
+      root.left = null;
+      prev = root;
+  }
+  ```
