--- a/leetcodeWebsite/148 链表排序.md
+++ b/leetcodeWebsite/148 链表排序.md
@@ -11,20 +11,186 @@ Given the `head` of a linked list, return *the list after sorting it in **ascend
 使用算法书上的split函数
 
 ```python
-def split(A, i, j): # split [i, j) 
-    if i >= j:
+def split(A, start, end): # split [i, j) 
+    if start >= end:
         return 
-    e = i
-    pivot = A[i]
-    while e != j:
-        if A[e] < pivot and i != e:
+    i = j = start
+    pivot = A[start]
+    while j < end:
+        if A[j] < pivot and i != j:
             A[i] = pivot
             i += 1
         j += 1
     A[i] = pivot
     return i
-          
 ```
+
+**实现**
+
+```python
+class Solution:
+    def sortList(self, head: ListNode) -> ListNode:
+        def helper(h, end_next):
+            if h == end_next or h.next == end_next:
+                return h
+            i, j = h, h.next
+            pivot = i.val
+            while j != end_next:
+                if j.val <= pivot:
+                    i = i.next
+                    if i != j:
+                        i.val, j.val = j.val, i.val
+                j = j.next
+            h.val, i.val = i.val, h.val
+            return i
+
+        def quicksort(begin, end_next):
+            if begin == end_next or begin.next == end_next:
+                return begin
+            mid = helper(begin, end_next)
+            quicksort(begin, mid)
+            quicksort(mid.next, end_next)
+            return begin
+
+        return quicksort(head, None)
+```
+
+超时， 3W个[1, 2, 3]
+
+
+
+归排
+
+```python
+class Solution:
+    def sortList(self, head: ListNode) -> ListNode:  
+        def mergesort(begin, end_next):
+            if not begin or begin.next == end_next:
+                return begin
+            p, q = begin, begin.next
+            while q.next and q.next.next:
+                p = p.next 
+                q = q.next.next
+            r = mergesort(p.next, end_next)
+            p.next = None
+            l = mergesort(begin, None)
+            dummy = t = ListNode()
+            while l and r:
+                if l.val < r.val:
+                    t.next = l
+                    l = l.next
+                else:
+                    t.next = r
+                    r = r.next
+                t = t.next
+            
+            while l:
+                t.next = l
+                l = l.next
+                t = t.next
+            while r:
+                t.next = r
+                r = r.next
+                t = t.next
+            t.next = None
+            
+            # can be replaced by `t.next = l if l else r`
+            return dummy.next
+           
+        return mergesort(head, None)
+```
+
+`Merge Sort` takes `θ(lgn)`空间复杂度，虽然能够跑通程序，但是并非是满足要求的结果。
+
+
+
+
+
+* ##### Bottom-to-up(not recurring)  with o(1) space complexity and o(nlgn) time complexity
+
+  此人给了一个自底向上的归并排序，不需要递归。VERY GOOD.
+
+```java
+/**
+ * Merge sort use bottom-up policy, 
+ * so Space Complexity is O(1)
+ * Time Complexity is O(NlgN)
+ * stable sort
+*/
+class Solution {
+public:
+	ListNode *sortList(ListNode *head) {
+		if(!head || !(head->next)) return head;
+		
+		//get the linked list's length
+		ListNode* cur = head;
+		int length = 0;
+		while(cur){
+			length++;
+			cur = cur->next;
+		}
+		
+		ListNode dummy(0);
+		dummy.next = head;
+		ListNode *left, *right, *tail;
+		for(int step = 1; step < length; step <<= 1){
+			cur = dummy.next;
+			tail = &dummy;
+			while(cur){
+				left = cur;
+				right = split(left, step);
+				cur = split(right,step); // 下一次merge的地方
+				tail = merge(left, right, tail);
+			}
+		}
+		return dummy.next;
+	}
+private:
+	/**
+	 * Divide the linked list into two lists,
+     * while the first list contains first n ndoes
+	 * return the second list's head
+	 */
+	ListNode* split(ListNode *head, int n){
+		//if(!head) return NULL;
+		for(int i = 1; head && i < n; i++) head = head->next;
+		
+		if(!head) return NULL;
+		ListNode *second = head->next;
+		head->next = NULL;
+		return second;
+	}
+	/**
+	  * merge the two sorted linked list l1 and l2,
+	  * then append the merged sorted linked list to the node head
+	  * return the tail of the merged sorted linked list
+	 */
+	ListNode* merge(ListNode* l1, ListNode* l2, ListNode* head){
+		ListNode *cur = head;
+		while(l1 && l2){
+			if(l1->val > l2->val){
+				cur->next = l2;
+				cur = l2;
+				l2 = l2->next;
+			}
+			else{
+				cur->next = l1;
+				cur = l1;
+				l1 = l1->next;
+			}
+		}
+		cur->next = (l1 ? l1 : l2);
+		while(cur->next) cur = cur->next;
+		return cur;
+	}
+};
+```
+
+
+
+
+
+
 
 
 
