--- a/leetcodeWebsite/216组合和Ⅲ.md
+++ b/leetcodeWebsite/216组合和Ⅲ.md
@@ -14,10 +14,9 @@ class Solution:
     def combinationSum3(self, k: int, n: int) -> List[List[int]]:
         res, path = [], [None] * k
         def dfs(i, j):
-            if i == k:
-                if sum(path) == n:
-                    res.append(path[:])
-            elif j < 10:
+            if i == k and sum(path) == n:
+                res.append(path[:])
+            if i < k and j < 10:
                 for t in range(j, 10):
                     path[i] = t
                     dfs(i+1, t+1)
