--- a/leetcodeWebsite/015三数和0.md
+++ b/leetcodeWebsite/015三数和0.md
@@ -4,7 +4,7 @@ Given an integer array nums, return all the triplets `[nums[i], nums[j], nums[k]
 
 Notice that the solution set must not contain duplicate triplets.
 
-* 最简单的方式是遍历所有的三元组，，时间复杂度`O(n3)`。这样显然耗费太高。
+* 最简单的方式是遍历所有的三元组，时间复杂度`O(n3)`。这样显然耗费太高。
 
   可以先将其排序，再观察有无更好的方式。排序数组的两数之和为0，只需要`O(n)`时间即可找到所有和为0的二元组。
 
@@ -105,3 +105,4 @@ Notice that the solution set must not contain duplicate triplets.
   ```
 
   
+
