--- a/leetcodeWebsite/029整数相除.md
+++ b/leetcodeWebsite/029整数相除.md
@@ -1,3 +1,11 @@
+Given two integers `dividend` and `divisor`, divide two integers without using multiplication, division, and mod operator（乘、除、求余算子）.
+
+Return the quotient after dividing `dividend` by `divisor`.
+
+The integer division should truncate toward zero, which means losing its fractional part. For example, `truncate(8.345) = 8` and `truncate(-2.7335) = -2`.
+
+**Note:** Assume we are dealing with an environment that could only store integers within the **32-bit** signed integer range: `[−231, 231 − 1]`. For this problem, assume that your function **returns** `231 − 1` **when the division result overflows**.
+
 * My Solution
 ```python
 def mymod(a, b):
@@ -32,7 +40,7 @@ $(a-b) < 0 ​$?
 
 * Leetcode [Disscussion](https://leetcode.com/problems/divide-two-integers/discuss/142849/C%2B%2BJavaPython-Should-Not-Use-%22long%22-Int)
 
-$b​$向左移位$t​$，直到刚好小于$a​$，于是乎，此时它的商为$1<<t​$，此时还剩下 $a - b<<t​$ 这么多值可用于求商。
+$b$向左移位$t$，直到刚好小于$a$，于是乎，此时它的商为$1<<t$，此时还剩下 $a - b<<t​$ 这么多值可用于求商。
 
 ```c++
 int divide(int A, int B) {
@@ -51,7 +59,7 @@ int divide(int A, int B) {
 
 ---
 
-将$b​$向左移位可以，可否将$a​$向右移位？
+将$b$向左移位可以，可否将$a$向右移位？
 
 ```python
 def divide(self, A, B):
