--- a/leetcodeWebsite/209子数组的最小和.md
+++ b/leetcodeWebsite/209子数组的最小和.md
@@ -2,7 +2,7 @@
 
 Given an array of positive integers `nums` and a positive integer `target`, return the minimal length of a **contiguous subarray** `[numsl, numsl+1, ..., numsr-1, numsr]` of which the sum is greater than or equal to `target`. If there is no such subarray, return `0` instead.
 
-* M1
+* M1：双指针`(i, j)`，j不断向后扩展提升和(扩大`(i, j)`区间)，i不断向后shrink和（缩小`(i, j)`区间）
 
 ```python
 class Solution:
@@ -18,6 +18,7 @@ class Solution:
                 i += 1
             if s >= target:
                 minl = min(minl, j - i)
+            # shrink, 使得和小于target
             s -= nums[i]
             i += 1
         return 0 if minl==float('inf') else minl
