--- a/leetcodeWebsite/215Kth元素.md
+++ b/leetcodeWebsite/215Kth元素.md
@@ -4,7 +4,7 @@ Given an integer array `nums` and an integer `k`, return *the* `kth` *largest el
 
 Note that it is the `kth` largest element in the sorted order, not the `kth` distinct element.
 
-* M1：借助快排划分`split`算法，将nums分割为小于pivot的一段和另一段。
+* M1：借助快排划分`split`算法，将`nums`分割为小于pivot的一段和另一段。
 
 ```python
 def split(nums, start, end):
@@ -46,4 +46,5 @@ def topk(nums, k):
     return h[0]
 ```
 
-空间复杂度为`O(k)`
+​	空间复杂度为`O(k)`
+
