--- a/leetcodeWebsite/220包含重复Ⅲ.md
+++ b/leetcodeWebsite/220包含重复Ⅲ.md
@@ -2,10 +2,6 @@
 
 Given an integer array `nums` and two integers `k` and `t`, return `true` if there are **two distinct indices** `i` and `j` in the array such that `abs(nums[i] - nums[j]) <= t` and `abs(i - j) <= k`.
 
-
-
-
-
 * LeetCode: [Java/Python one pass solution, O(n) time O(n) space using buckets](Java/Python one pass solution, O(n) time O(n) space using buckets)
 
   算法本身和实现可以是两种形式！ 虽然用了桶排，但是并没有采用原封不动的桶排，而是采用了字典的方式来实现。
@@ -29,5 +25,5 @@ Given an integer array `nums` and two integers `k` and `t`, return `true` if the
       return False
   ```
 
-  
+  空间复杂度为On，但是可以降低n方时间复杂度为n。
 
