--- a/leetcodeWebsite/221最大方形.md
+++ b/leetcodeWebsite/221最大方形.md
@@ -2,7 +2,7 @@
 
 Given an `m x n` binary `matrix` filled with `0`'s and `1`'s, *find the largest square containing only* `1`'s *and return its area*.
 
-* M1：
+* M1：利用柱状图中最大矩形的方式，将每一行的结果转换为
 
 ```python
 # 30mins
@@ -34,8 +34,6 @@ class Solution:
             maxs = max(maxs, ms(dp))
         return maxs * maxs
 ```
-
-
 
 * `LeetCode`: Dynamic Programming
 
