--- a/leetcodeWebsite/239滑动窗口最大值.md
+++ b/leetcodeWebsite/239滑动窗口最大值.md
@@ -4,9 +4,7 @@ You are given an array of integers `nums`, there is a sliding window of size `k`
 
 Return *the max sliding window*.
 
-
-
-* mine 
+* M1:将最新的k个元素维护在一个堆中，每次弹出堆中最大值。若在最新的k个区间，则保留；否则继续弹出元素。
 
 ```python
 import heapq
@@ -29,8 +27,6 @@ class Solution:
         return res
 ```
 
-
-
 简化一下，先放(k-1)个元素进去。然后对接下来的每一个元素，入堆，再使用堆弹出最大元素，如果该元素位置不在合理区间，则抛弃，否则存入结果集，再处理下一个元素。
 
 ```python
@@ -49,7 +45,5 @@ class Solution:
             res.append(nums[lst[0][1]])
         return res
 ```
-
-
 
 * `heapq`操作
