--- a/leetcodeWebsite/365倒水问题.md
+++ b/leetcodeWebsite/365倒水问题.md
@@ -10,11 +10,15 @@ Operations allowed:
 - Empty any of the jugs.
 - Pour water from one jug into another till the other jug is completely full, or the first jug itself is empty.
 
+
+
+---
+
 * 将水倒入小容量杯子a，再灌入大容量杯b中，如此循环，查看是否能有 ax % b = target。若有解，则表示能够得到target容量的水。
 
 
 
-​	数学[知识：扩展的欧几里得算法（辗转相除）](https://blog.csdn.net/lanchunhui/article/details/50594649)有，方程有解的条件是 `target % gcd(a, b) = 0`。判断target对ab最大公约数取余的情况即可。	
+​	数学[知识：扩展的欧几里得算法（辗转相除）](https://blog.csdn.net/lanchunhui/article/details/50594649)有，方程有解的条件是 `target % gcd(a, b) = 0`。判断target对ab最大公约数取余的情况即可。
 
 ```python
 def ext_euclid(a, b):
@@ -39,11 +43,9 @@ def mod_linear_equation(a, b, c):
 
 
 
-
-
 ---
 
-求最大公约数
+求最大公约数（欧几里得、辗转相除法）
 
 ```python
 def gcd(a, b):
