--- a/leetcodeWebsite/207课程表.md
+++ b/leetcodeWebsite/207课程表.md
@@ -1,6 +1,12 @@
-# 209课程表
+# 207课程表
 
+There are a total of `numCourses` courses you have to take, labeled from `0` to `numCourses - 1`. You are given an array `prerequisites` where `prerequisites[i] = [ai, bi]` indicates that you **must** take course `bi` first if you want to take course `ai`.
 
+- For example, the pair `[0, 1]`, indicates that to take course `0` you have to first take course `1`.
+
+Return `true` if you can finish all courses. Otherwise, return `false`.
+
+---
 
 拓扑排序
 
@@ -16,7 +22,7 @@ class Solution:
     def canFinish(self, numCourses: int, prerequisites: List[List[int]]) -> bool:
         cs = [[] for _ in range(numCourses)]
         for a, b in prerequisites:
-            cs[b] += a,
+            cs[a] += b, # 列表中存储课程a之前必须学习的课程
         popout = [False] * numCourses
         cnt = numCourses
         while cnt:
@@ -34,7 +40,7 @@ class Solution:
         return not cnt
 ```
 
-拓扑排序的时间复杂°是$O(n^3)$?采用DFS算法的速度更快？
+拓扑排序的时间复杂度是$O(n^3)$?采用DFS算法的速度更快？
 
 * M2: dfs
 
@@ -44,10 +50,7 @@ class Solution:
         cs = [[] for _ in range(numCourses)]
         for a, b in prerequisites:
             cs[a] += b,
-        
 ```
-
-
 
 * ##### Python 20 lines DFS solution sharing with [explanation](https://leetcode.com/problems/course-schedule/discuss/58586/Python-20-lines-DFS-solution-sharing-with-explanation/60058)
 
