--- a/leetcodeWebsite/216组合和Ⅲ.md
+++ b/leetcodeWebsite/216组合和Ⅲ.md
@@ -7,7 +7,7 @@ Find all valid combinations of `k` numbers that sum up to `n` such that the foll
 
 Return *a list of all possible valid combinations*. The list must not contain the same combination twice, and the combinations may be returned in any order.
 
-* M1：组合可以采用递归的方式？
+* M1：组合可以采用递归的方式
 
 ```python
 class Solution:
