--- a/leetcodeWebsite/037数独.md
+++ b/leetcodeWebsite/037数独.md
@@ -10,7 +10,7 @@ A sudoku solution must satisfy **all of the following rules**:
 
 The `'.'` character indicates empty cells.
 
-* mine
+* mine：深度搜索，每个待定位置计算可能的元素并进行深搜。如果失败，则尝试该位置的下一个元素。
 
 ```python
 def dfs(board):
