--- a/leetcodeWebsite/082 移除排序链表重复元素.md
+++ b/leetcodeWebsite/082 移除排序链表重复元素.md
@@ -27,6 +27,28 @@ class Solution:
         return t.next
 ```
 
+```python
+class Solution:
+    def deleteDuplicates(self, head: ListNode) -> ListNode:
+        if not head:
+            return None
+        dummy = k = ListNode(next=head)
+        while p:
+			q = p.next
+        	 while q and p.val == q.val:
+             	q = q.next
+        	 if p.next is q:
+                k.next = p
+                k = k.next
+              p = q.next
+        k.next = None
+        return t.next
+```
+
+
+
+
+
 
 
 * ##### Python [in-place solution with dummy head node.](https://leetcode.com/problems/remove-duplicates-from-sorted-list-ii/discuss/28336/Python-in-place-solution-with-dummy-head-node.)
