--- a/leetcodeWebsite/084 直方图最大矩形.md
+++ b/leetcodeWebsite/084 直方图最大矩形.md
@@ -78,4 +78,4 @@ def largestRectangleArea(self, height):
     return ans
 ```
 
-The stack maintain the indexes of buildings with ascending height. Before adding a new building pop the building who is taller than the new one. The building popped out represent the height of a rectangle with the new building as the right boundary and the current stack top as the left boundary. Calculate its area and update ans of maximum area. Boundary is handled using dummy buildings.
+The stack maintain the indexes of buildings with ascending height(栈中维持递增高度的柱子). Before adding a new building pop the building who is taller than the new one. The building popped out represent the height of a rectangle with the new building as the right boundary and the current stack top as the left boundary. Calculate its area and update ans of maximum area. Boundary is handled using dummy buildings.
