--- a/leetcodeWebsite/075颜色排序.md
+++ b/leetcodeWebsite/075颜色排序.md
@@ -53,7 +53,22 @@ class Solution {
 
 这里 `i > zeros`会有问题吗？还是应该换为 `i >= zero`?
 
-```python
 
+
+将上面的代码转为Python代码
+
+```python
+def setColors(nums):
+    n = len(nums)
+    zero, second = 0, len(nums) - 1 
+    while i <= second:
+        while nums[i] == 2 and i < second:
+            nums[i], nums[second] = nums[second], nums[i]
+            second -= 1
+        while nums[i] == 0 and i > zero:
+            nums[i], nums[zero] = nums[zero], nums[i]
+            zero += 1
+        i += 1
+    return nums
 ```
 
