--- a/leetcodeWebsite/109 转换有序链表为BST.md
+++ b/leetcodeWebsite/109 转换有序链表为BST.md
@@ -1,6 +1,8 @@
 # 109 转换有序链表为BST
 
+Given the `head` of a singly linked list where elements are **sorted in ascending order**, convert it to a height balanced BST.
 
+For this problem, a height-balanced binary tree is defined as a binary tree in which the depth of the two subtrees of *every* node never differ by more than 1.
 
 * mine：寻找到中间节点的前一个节点，将中间节点作为根节点，左右两侧单链表分别构造
 
