--- a/leetcodeWebsite/129 节点到叶子节点总和.md
+++ b/leetcodeWebsite/129 节点到叶子节点总和.md
@@ -1,6 +1,18 @@
 # 129 节点到叶子节点总和
 
+You are given the `root` of a binary tree containing digits from `0` to `9` only.
 
+Each root-to-leaf path in the tree represents a number.
+
+- For example, the root-to-leaf path `1 -> 2 -> 3` represents the number `123`.
+
+Return *the total sum of all root-to-leaf numbers*. Test cases are generated so that the answer will fit in a **32-bit** integer.
+
+A **leaf** node is a node with no children.
+
+---
+
+* M1: 遍历所有的路径，若为叶子节点则将数值加入到totalSum中
 
 ```python
 def dfs(t, preS):
