--- a/leetcodeWebsite/164最大gap.md
+++ b/leetcodeWebsite/164最大gap.md
@@ -12,7 +12,7 @@ class Solution:
         MAX, MIN = max(nums), min(nums)
         ran = MAX - MIN
         n = len(nums)
-        delta = max(1, (ran + 1) / n)
+        delta = max(1, (ran + 1) / n) # 多分几个筐，使得一个筐内必不存在maxGap
         bulks = []
         
         for _ in range(n):
