--- a/leetcodeWebsite/166无限循环小数.md
+++ b/leetcodeWebsite/166无限循环小数.md
@@ -89,3 +89,32 @@ if __name__=='__main__':
 
 
 * Leetcode [Disc](https://leetcode.com/problems/fraction-to-recurring-decimal/discuss/51110/Do-not-use-python-as-cpp-here's-a-short-version-python-code)
+
+* M3
+
+```python
+class Solution:
+    def fractionToDecimal(self, numerator: int, denominator: int) -> str:
+        is_neg = (numerator > 0) ^ (denominator > 0)
+        numerator, denominator = abs(numerator), abs(denominator)
+
+        q, r = divmod(numerator, denominator)
+        res, lst = [], [] # lst 存储出现过的被除数，res存储每一位的商（小数部分）
+        while r:
+            if r in lst: # 若此r出现在历史上的某个位置，则出现循环的情况
+                res.insert(lst.index(r) - len(lst), "(")
+                res.append(")")
+                break
+
+            lst.append(r)
+            res.append(str(r // denominator))
+            r = r % denominator
+            r *= 10
+        if numerator == 0: return "0"
+        if not res:return  ("-" if is_neg else "") + str(numerator // denominator)
+        res.insert(1, ".")
+        if q > 0:
+            res[0] = str(q)
+        return ("-" if is_neg else "") + "".join(res)
+```
+
