--- a/leetcodeWebsite/169多数元素.md
+++ b/leetcodeWebsite/169多数元素.md
@@ -2,7 +2,7 @@
 
 找出数组中超过一半的元素
 
-* mine：从前往后遍历数组，如果新元素与之前的元素相同则加一，相异则减一。多数元素一定会胜出。最后验证剩余的元素是否位多数元素。
+* mine：从前往后遍历数组，如果新元素与之前的元素相同则加一，相异则减一。多数元素一定会胜出。最后验证剩余的元素是否为多数元素。
 
 ```python
 def majority_element(nums):
