--- a/leetcodeWebsite/169多数元素.md
+++ b/leetcodeWebsite/169多数元素.md
@@ -2,6 +2,12 @@
 
 找出数组中超过一半的元素
 
+Given an array `nums` of size `n`, return *the majority element*.
+
+The majority element is the element that appears more than `⌊n / 2⌋` times. You may assume that the majority element always exists in the array.
+
+---
+
 * mine：从前往后遍历数组，如果新元素与之前的元素相同则加一，相异则减一。多数元素一定会胜出。最后验证剩余的元素是否为多数元素。
 
 ```python
@@ -22,5 +28,45 @@ def majority_element(nums):
         if n == e:
             e_cnt += 1
     return e_cnt > total_cnt // 2
+```
+
+仔细审题，发现说的是必然存在多数元素，因此没有必要进行第二次遍历。
+
+```python
+def majority_element(nums):
+   	e, cnt = None, 0
+    for n in nums:
+        if cnt == 0:
+            e, cnt = n, 1
+        elif e == n:
+            cnt += 1
+        else:
+            cnt -= 1
+     return e
+```
+
+More Trick
+
+```python
+def majority_element(nums):
+   	e, cnt = None, 0
+    for n in nums:
+        if cnt == 0:
+            e, cnt = n, 1
+        else:
+            cnt = cnt - 1 + (e == n) * 2
+    return e
+```
+
+
+
+```python
+def majority_element(nums):
+   	e, cnt = None, 0
+    for n in nums:
+        if cnt == 0:
+            e = n
+        cnt = cnt - 1 + (e == n) * 2 # cnt += (1 if e==n else -1)
+    return e
 ```
 
