--- a/leetcodeWebsite/188买卖股票Ⅳ.md
+++ b/leetcodeWebsite/188买卖股票Ⅳ.md
@@ -10,7 +10,7 @@ Find the maximum profit you can achieve. You may complete at most `k` transactio
 
 * M1：$dp[i, j] = min(dp[i, j-1] ,  max(prices[j] - prices[t] + dp[i-1, t-1]))$  for t in [1, j]
 
-  dp[i, j]，前j天交易k次的最大盈利
+  dp[i, j]，前j天最多交易k次的最大盈利
 
 ```python
 class Solution:
@@ -26,4 +26,7 @@ class Solution:
         return dp[k][len(prices) - 1]
 ```
 
-通过巧妙的观察，发现可以通过复用之前的结论，降低时间复杂度。
+通过观察，发现可以通过复用之前的结论，降低时间复杂度。
+
+line 9 可以替换为 : `# prices[i] - dp[r-1][i-1]` or `prices[i] - dp[r-1][i]`
+
