--- a/leetcodeWebsite/209子数组的最小和.md
+++ b/leetcodeWebsite/209子数组的最小和.md
@@ -24,3 +24,26 @@ class Solution:
         return 0 if minl==float('inf') else minl
 ```
 
+
+
+* M2
+
+```python
+class Solution:
+    def minSubArrayLen(self, target: int, nums: List[int]) -> int:
+        i, j = 0, 0 	# j 指向待添加的元素
+        s, minl = 0, float('inf')
+        while j < len(nums):
+            while s < target and j < len(nums):
+                s += nums[j]
+                j += 1
+            while i < j and s - nums[i] >= target:
+                s -= nums[i]
+                i += 1
+            if s >= target:
+                minl = min(minl, j - i)
+            s -= nums[i]
+            i += 1
+        return 0 if minl==float('inf') else minl
+```
+
