--- a/leetcodeWebsite/047排列2.md
+++ b/leetcodeWebsite/047排列2.md
@@ -32,13 +32,11 @@ class Solution:
 
 * *Modified Version*
 ```python
-from collections import defaultdict
+from collections import Coutner
 
 class Solution:
     def permuteUnique(self, nums: List[int]) -> List[List[int]]:
-        wc = defaultdict(int)
-        for n in nums:
-            wc[n] += 1
+        wc = dict(Counter(nums))
         res = []
         self.forward(len(nums), 0, wc, [], res)
         return res
@@ -46,12 +44,12 @@ class Solution:
     def forward(self, n, idx, wc, path, res):
         if idx == n:
             res.append(path)
-        else:
-            for k, v in wc.items():
-                if v > 0:
-                    wc[k] -= 1
-                    self.forward(n, idx+1, wc, path + [k], res)
-                    wc[k] += 1
+            return 
+        for k, v in wc.items():
+            if v > 0:
+                wc[k] -= 1
+                self.forward(n, idx+1, wc, path + [k], res)
+                wc[k] += 1
 ```
 
 
