--- a/leetcodeWebsite/062唯一路径数量.md
+++ b/leetcodeWebsite/062唯一路径数量.md
@@ -1,6 +1,14 @@
 # 062唯一路径数量
 
+A robot is located at the top-left corner of a `m x n` grid (marked 'Start' in the diagram below).
+
+The robot can only move either down or right at any point in time. The robot is trying to reach the bottom-right corner of the grid (marked 'Finish' in the diagram below).
+
+How many possible unique paths are there?
+
 https://leetcode.windliang.cc/leetCode-62-Unique-Paths.html
+
+---
 
 * 5mins, 误range(m) -> range(m-1)
 
