--- a/leetcodeWebsite/064路径最小耗费.md
+++ b/leetcodeWebsite/064路径最小耗费.md
@@ -1,4 +1,12 @@
-* 6mins
+# 64路径最小耗费
+
+Given a `m x n` `grid` filled with non-negative numbers, find a path from top left to bottom right, which minimizes the sum of all numbers along its path.
+
+**Note:** You can only move either down or right at any point in time.
+
+
+
+* 6mins: 计算从左侧还是上侧下来的耗费小一些
 ```python
 class Solution:
     def minPathSum(self, grid: List[List[int]]) -> int:
