--- a/leetcodeWebsite/084 直方图最大矩形.md
+++ b/leetcodeWebsite/084 直方图最大矩形.md
@@ -69,7 +69,7 @@ def largestRectangleArea(self, height):
     stack = [-1]
     ans = 0
     for i in xrange(len(height)):
-        while height[i] < height[stack[-1]]:
+        while height[i] < height[stack[-1]]: # height[-1] = 0;wnm绝了
             h = height[stack.pop()]
             w = i - stack[-1] - 1
             ans = max(ans, h * w)
