--- a/leetcodeWebsite/210课表Ⅱ.md
+++ b/leetcodeWebsite/210课表Ⅱ.md
@@ -20,6 +20,7 @@ class Solution:
         while cnt:
             for i, c in enumerate(cs):
                 if not popout[i] and not c:
+                # 未弹出且其依赖为空（入度为0）
                     cnt -= 1
                     popout[i] = True
                     res += i,
