--- a/leetcodeWebsite/220包含重复Ⅲ.md
+++ b/leetcodeWebsite/220包含重复Ⅲ.md
@@ -27,3 +27,70 @@ Given an integer array `nums` and two integers `k` and `t`, return `true` if the
 
   空间复杂度为On，但是可以降低n方时间复杂度为n。
 
+
+
+
+
+* M1
+
+```python
+class Solution:
+    def containsNearbyAlmostDuplicate(self, nums: List[int], k: int, t: int) -> bool:
+        d = {}
+        t += 1
+        n = len(nums)
+        for i in range(min(k+1, n)):
+            bucket = nums[i] // t
+            if bucket in d:
+                return True
+            if bucket - 1 in d and abs(nums[d[bucket - 1]] - nums[i]) < t:
+                return True
+            if bucket + 1 in d and abs(nums[d[bucket + 1]] - nums[i]) < t:
+                return True
+            d[nums[i] // t] = i
+            
+            if i >= min(k+1, n):
+                del d[nums[i - k - 1] // t]
+            
+        for i in range(min(k+1, n), n):
+            del d[nums[i - k - 1] // t]
+            
+            bucket = nums[i] // t
+            if bucket in d:
+                return True
+            if bucket - 1 in d and abs(nums[d[bucket - 1]] - nums[i]) < t:
+                return True
+            if bucket + 1 in d and abs(nums[d[bucket + 1]] - nums[i]) < t:
+                return True
+            d[nums[i] // t] = i
+        return False
+```
+
+
+
+Refine
+
+```python
+class Solution:
+    def containsNearbyAlmostDuplicate(self, nums: List[int], k: int, t: int) -> bool:
+        d = {}
+        t += 1
+        n = len(nums)
+        for i in range(n):
+            bucket = nums[i] // t
+            if bucket in d:
+                return True
+            if bucket - 1 in d and abs(nums[d[bucket - 1]] - nums[i]) < t:
+                return True
+            if bucket + 1 in d and abs(nums[d[bucket + 1]] - nums[i]) < t:
+                return True
+            d[bucket] = i
+            
+            if i >= min(k, n): # 如果超过一个阈值，则将第一个元素删除再行下一步
+                del d[nums[i - k] // t]
+        return False
+```
+
+k = 0
+
+t = 0?
