--- a/leetcodeWebsite/221最大方形.md
+++ b/leetcodeWebsite/221最大方形.md
@@ -8,7 +8,7 @@ Given an `m x n` binary `matrix` filled with `0`'s and `1`'s, *find the largest 
 # 30mins
 def ms(hs):
     hs = [0] + hs + [0]
-    maxs = min(1, hs[0])
+    maxs = 0
     stack = [0]
     i = 1
     while i < len(hs): # 有哨兵，不需要 `or stack`
@@ -35,7 +35,23 @@ class Solution:
         return maxs * maxs
 ```
 
+`ms`函数非常的tricky，里面可以这样做
+
+```python
+def ms(hs):
+    hs = hs + [0]
+    maxs = 0
+    stack = [-1]
+    i = 0
+# stack initialized as [-1], and hs[-1] = 0
+# -1 will never pop from the stack(popout condition will never occur).
+```
+
+
+
+
+
 * `LeetCode`: Dynamic Programming
 
-$dp[i, j] = min(dp[i-1, j], dp[i, j-1], dp[i-1, j-1]) + 1​$
+$dp[i, j] = min(dp[i-1, j], dp[i, j-1], dp[i-1, j-1]) + 1$
 
